# fetchsmart

./: .gitignore  .requirements.txt  BUILD.md  License  Makefile  README.md  docker-compose.yml  env.example.txt  kaggle-notebook-structured.ipynb  package-lock.json  pyproject.toml  service-account-key.json  test_docs.py  test_google_drive.py  test_weave_tracing.py
.claude/: .mcp.json  settings.json
app/: CHANGELOGS.md  agent.py  agent_engine_app.py  config.py
docs/: ADK_DEPLOYMENT_GUIDE.md  AGENTS_REFERENCE.md  AGENT_PROMPTS.md  AGENT_ROUTING_EXPLAINED.md  CHANGE_LOG.md  DEPLOY_DOCQABOT.md  ENV_VARS_GUIDE.md  GOOGLE_DOCS_DEMO.md  GOOGLE_DRIVE_SETUP.md  IMPLEMENTATION_PLAN.md  KAGGLE.md  MULTI_AGENT_ARCHITECTURE.md  MULTI_AGENT_DEPLOYMENT.md  MULTI_AGENT_SUMMARY.md  NEXTJS_VERCEL_DEPLOYMENT_GUIDE.md  QUICKSTART_GOOGLE_DOCS.md  RECRUITMENT_BACKEND_MCP_REFACTOR.md  START_HERE.md  TEAMS_DEMO_SCRIPT.md  TESTING_GUIDE.md  TODOSupply.md  WEAVE_TRACING_SETUP.md  recplan.md
logs/: deployment_metadata.json
mcp_server/: .dockerignore  .gitignore  Dockerfile  env.example.txt  main.py  mcppoagent.py  requirements.txt  server.py  test_gmail.py  test_google_ai.py
mcp_server/recruitment_backend/: Dockerfile  __init__.py  candidate_matcher.py  deploy.ps1  deploy.sh  github_profiles_100.json  github_scraper.py  pyproject.toml  recruitment_service.py  requirements.txt  server.py  test_a2a_client.py  test_mcp_tools.py  test_service.py  test_tools_simple.py
nextjs/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  vercel.json
scripts/: deploy-agent.ps1  (+3 more)
(+139 files in other folders)
