[project]
name = "recruitment-backend"
version = "0.1.0"
description = "Mock recruitment data service for agent development"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.10.0",
    "a2a-sdk>=0.2.5",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "nest-asyncio>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

